--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 body{
-  background-color: rgb(150, 75, 27);
+  background-color: rgb(77, 154, 233);
   color: white;
 }
 
-.container{
+.guessingArea{
   width: 600px;
   margin: 0 auto;
   padding: 10px 10px;
